--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend server for Time Tracking Application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start-dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
